[c-874] remove design access after user gets removed from a team (#1637)
* Respect collectionIds in the creation route

* Fix broken tests

* Add one-of script adding collaborators for legacy designs

* Fix no-console error

* Fix console.log again

* Move some tests to the DAO level

* Add debug information into the failing tests

* Add more debug information

* Stub unused createDesignTasks

* Remove console.log

* Fix not found checking

* Fix broken tests

* Respect collectionId query param in creation by template route

* Fix indentation

* Fix broken file

* Fix format

* Remove indentation rule from eslint

* Update some tests

* Fix tests

* Fix tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "no-unused-vars": [2, { "varsIgnorePattern": "^_.+$" }],
     "no-await-in-loop": 0,
     "comma-dangle": 0,
+    "indent": 0,
     "operator-linebreak": 0,
     "implicit-arrow-linebreak": 0,
     "no-console": 2,
