[M-1255] Enforce minimum version (#1971)
* [M-1255] Enforce minimum version

- [x] Test coverage
- [x] Justification for new dependency
  - It's small, it's [written by npm](https://github.com/npm/node-semver), _and_ it was already in our dependency tree.

* stop shadowing

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node-fetch": "^2.3.3",
     "@types/node-uuid": "0.0.28",
     "@types/pg": "^7.14.11",
+    "@types/semver": "^7.3.6",
     "apollo-server-koa": "^2.19.0",
     "aws-sdk": "^2.302.0",
     "bcrypt": "5.0.0",
@@ -44,6 +45,7 @@
     "pg-rethrow": "1.0.1",
     "probe-image-size": "^4.0.0",
     "promise-events": "^0.1.8",
+    "semver": "^7.3.5",
     "ts-node": "^7.0.1",
     "tslint": "^5.10.0",
     "tslint-config-airbnb": "^5.9.2",
